@@ -11,6 +11,7 @@ DIST SABnzbd-1.0.0-src.tar.gz 2973807 SHA256 7573dfafd6f3b51e899f47436de0e0b3d8e
 DIST SABnzbd-1.0.2-src.tar.gz 2974940 SHA256 9ced2f4b9486674e8b0a920769710b16e7d96a9981d5aa47b6584f2c3a1e0b62 SHA512 719269f4194ddf12df91e52deda4f9430330dba098b1d4d67093cd2fc0a6a54b1312f27f74c3902aa9d0d8e39925e1f23fe8784d4c34fe5b960c395bbc9a8961 WHIRLPOOL f67284bbb022e35c7eb943f33313648a1ea8c14b2a0e8b8ccf1cdc73b07072f43ccb78dd3c8225d701a49821c81c860c3aa11d5bc16c4b87bb021254b35d6b34
 DIST SABnzbd-1.0.3-src.tar.gz 2975111 SHA256 cf87d3f17fc03e8b3a4b3010261115c2ad7e2f773b5ede95a80025b340dbbd35 SHA512 6213cb73f6d2127133c5ab292e5ac2bcf6f4c780b5345b54b91459271c1acad6c6c95c4ba1ebc1e34341d5dc09d14e4806b84b977fc90f5ff0a49725b08a77e9 WHIRLPOOL 021a864f8d2b90481da5f4d1b3b1a5a5478230c3a61af2c30ba2be65594224863a48d58d475fc2e79986274e48e5ad83b5d13a6bc0a7829e99552062fdf185a7
 DIST SABnzbd-1.1.0-src.tar.gz 2736977 SHA256 3e86a897dea1c276c54ee38667a980f644f16d57df75612fe9eefa84b339ce9a SHA512 4fd4304253ec66c7bc6038fe8eb7bc08f0133cc4eda9efb28349242574744f262369fe43786da5a22eb90664cfa7fb91356941174787c4faef7d7624751a86d2 WHIRLPOOL f5ef42a01cd1c79f28bbd42c6970b9a1b66846af266c027354494cd103d03d14d2914a3d2b88b1aef740a6e849b9e3216c639323f41146553c5f2dcdeef182aa
+DIST SABnzbd-1.1.1-src.tar.gz 2736427 SHA256 001f19c5a98de641da9fc69cff8ee885f3422d511a73e923dcb713aaca763d44 SHA512 77deebbbdb2286791d0d0615a1f438874bb85735279a7d8e1d553909ca1dba5ea84c66ed276023e7ccf9676fc13c25760f2bc191483195e7c47e2c03bd5c636a WHIRLPOOL 0693ecd8778ca9f47f89528b17ddeef0d9fa1c635acdcff881a4aac239834a4d14c0287e992f212b6be8e993f28a7c774d4a47b5beb716b7ebbc64dcd635f2a8
 EBUILD sabnzbd-0.7.16.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.17.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-0.7.18.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
@@ -21,5 +22,6 @@ EBUILD sabnzbd-1.0.0.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164e
 EBUILD sabnzbd-1.0.2.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
 EBUILD sabnzbd-1.0.3.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
 EBUILD sabnzbd-1.1.0.ebuild 2050 SHA256 863bb42a0c3bf74cbb419e825d5dca34d8a9a518be5d66f6af354196bebe82c3 SHA512 7b49f312bb581e6b347a010a5b940382116aa88e8b3d9b49344969538e6e96c394fe8b53d089fa48a6f81d1a04173e4d6dbbfd23d6c9c8a6f55149b0cc8d60a3 WHIRLPOOL 5e5620a26ef4eb6af17dd4c9d0317f63d30b5714fb66115130789ca3f75f391ad2f78bd395d307bf24439b3cfc384a7ebefa1049108c7df37e30ca652544db45
-MISC ChangeLog 4817 SHA256 915ec978b7aac3a46a9e88632909646eed41b94516bf8067b5c6c119274f03ea SHA512 0d3baf9063fde74fa1c72803626f027bf99bd4c33bb4a80478deb09388934e22ea9dc8bfb3c197e492d9d4fd17f505f8dbb67d60e7de2fcf542bb30acad78525 WHIRLPOOL 95567abd4d78da8c0d8d1fb59de26917dbf9ce745b8b50b0812a513ba5cc76073c9e6cd094795d6c0f2673cb8e3fbeee8fb99826e004f41c3bb345c6d3ed5952
+EBUILD sabnzbd-1.1.1.ebuild 2050 SHA256 863bb42a0c3bf74cbb419e825d5dca34d8a9a518be5d66f6af354196bebe82c3 SHA512 7b49f312bb581e6b347a010a5b940382116aa88e8b3d9b49344969538e6e96c394fe8b53d089fa48a6f81d1a04173e4d6dbbfd23d6c9c8a6f55149b0cc8d60a3 WHIRLPOOL 5e5620a26ef4eb6af17dd4c9d0317f63d30b5714fb66115130789ca3f75f391ad2f78bd395d307bf24439b3cfc384a7ebefa1049108c7df37e30ca652544db45
+MISC ChangeLog 4957 SHA256 fb7886508f538627c472fdf64a367fcf416579e33623388bc9c6c0102aa1bdf8 SHA512 c96cf33aa77443fe8d299be0fd3f4644169f4e6ffbec375df0e7d58b9ceaace5aa75831baf2383a950576d5edc97d6e5896e5aec0896951ad847e56856dc47bd WHIRLPOOL f632674ddd5f7630bdedf06dbf2770732972416535d9560a3213fe778d089d5c436635136e73995af0d306514bc0b912e22020ec987a2ad33d52fed7f5c40110
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
