@@ -2,6 +2,12 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sabnzbd-1.1.1 (17 Nov 2016)
+
+  17 Nov 2016; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  +sabnzbd-1.1.1.ebuild:
+  Version bump.
+
 *sabnzbd-1.1.10 (13 Sep 2016)
 
   13 Sep 2016; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
